--- a/arch/arm64/configs/cyanogenmod_oneplus3_defconfig
+++ b/arch/arm64/configs/cyanogenmod_oneplus3_defconfig
@@ -37,8 +37,12 @@ CONFIG_PARTITION_ADVANCED=y
 # CONFIG_IOSCHED_TEST is not set
 # CONFIG_IOSCHED_DEADLINE is not set
 CONFIG_IOSCHED_BFQ=y
+CONFIG_IOSCHED_FIOPS=y
+CONFIG_IOSCHED_SIO=y
 CONFIG_CGROUP_BFQIO=y
 CONFIG_DEFAULT_NOOP=y
+# CONFIG_DEFAULT_FIOPS is not set
+# CONFIG_DEFAULT_SIO is not set
 CONFIG_ARCH_MSM=y
 CONFIG_ARCH_MSM8996=y
 CONFIG_PCI_MSM=y
